Apply QT Tooltip workaround to fix cut off tooltip text throughout the application.

--- a/src/qt/res/css/main.css
+++ b/src/qt/res/css/main.css
@@ -665,7 +665,7 @@ QRadioButton[cssClass~="radio-button-faq"]::indicator {
 QToolTip {
     color: #ffffff;
     background-color: #6f9bf5;
-    font-size:13px;
+    font-size:11pt;
     border: none;
     border-radius:20px;
     padding:6px;
